--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -1,11 +1,28 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="wraithTech">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="csrf-token" content="{{ csrf_token() }}">
+
+        <link rel="stylesheet" href="css/all.css">
+        <link rel="stylesheet" href="css/app.css">
+
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.9/angular.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.9/angular-resource.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+        <script src="app.module.js"></script>
+        <script src="app.services.js"></script>
+        <script src="productList.directive.js"></script>
     </head>
 <body>
+
+<div class="container-fluid">
+
+    <product-list></product-list>
+
+</div>
 
 </body>
 </html>
