--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -8,9 +8,16 @@
         <link rel="stylesheet" href="css/all.css">
         <link rel="stylesheet" href="css/app.css">
 
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.9/angular.min.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.9/angular-resource.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="main.js"></script>
+
+        <!-- ======================================================================================================
+        CDN Territory
+        ===================================================================================================== -->
+        <!-- <script src="https://ajax.googleapis.com/ajax/libs/angul   arjs/1.7.9/angular.min.js"></script> -->
+        <!-- <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.9/angular-resource.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
+        <!-- ===================================================================================================== -->
+
 
         <script src="app.module.js"></script>
         <script src="app.services.js"></script>
