--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -5,10 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="csrf-token" content="{{ csrf_token() }}">
 
-        <link rel="stylesheet" href="css/all.css">
-        <link rel="stylesheet" href="css/app.css">
 
-        <script src="main.js"></script>
+        <link rel="stylesheet" href="styles/app.css">
+
+        <script src="public/app.js"></script>
 
         <!-- ======================================================================================================
         CDN Territory
