--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -6,22 +6,22 @@
         <meta name="csrf-token" content="{{ csrf_token() }}">
 
 
-        <link rel="stylesheet" href="styles/app.css">
+        <!-- <link rel="stylesheet" href="styles/app.css"> -->
 
-        <script src="public/app.js"></script>
+        <!-- <script src="public/app.js"></script> -->
 
         <!-- ======================================================================================================
         CDN Territory
         ===================================================================================================== -->
-        <!-- <script src="https://ajax.googleapis.com/ajax/libs/angul   arjs/1.7.9/angular.min.js"></script> -->
-        <!-- <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.9/angular-resource.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> -->
+        <!-- <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.9/angular.min.js"></script> -->
+        <!-- <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.9/angular-resource.js"></script> -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <!-- ===================================================================================================== -->
 
 
-        <script src="app.module.js"></script>
+        <!-- <script src="app.module.js"></script>
         <script src="app.services.js"></script>
-        <script src="productList.directive.js"></script>
+        <script src="productList.directive.js"></script> -->
     </head>
 <body>
 
