--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -4,8 +4,6 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="csrf-token" content="{{ csrf_token() }}">
-
-
         <!-- <link rel="stylesheet" href="styles/app.css"> -->
 
         <!-- <script src="public/app.js"></script> -->
@@ -26,9 +24,7 @@
 <body>
 
 <div class="container-fluid">
-
-    <shopping-cart></shopping-cart>
-
+    <ui-view></ui-view>
 </div>
 
 </body>
